--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "LINE Bot Server for Node.js",
   "main": "index.js",
   "scripts": {
+    "postinstall": "npm run build && npm run gen-default-ssl",
+    "gen-default-ssl": "ts-node scripts/gen-default-ssl.ts",
+    "gen-empty-env": "ts-node scripts/gen-empty-env.ts",
     "pretest": "npm run build",
     "test": "mocha -r ts-node/register test/**/*.spec.ts --exit",
     "lint": "tslint .",
@@ -31,19 +34,29 @@
   "homepage": "https://github.com/micksatana/line-bot-server-nodejs#readme",
   "dependencies": {
     "@line/bot-sdk": "^5.0.1",
+    "@types/dotenv": "^4.0.2",
     "@types/express": "^4.0.39",
+    "@types/fs-extra": "^4.0.5",
+    "@types/lodash": "^4.14.85",
+    "@types/node": "^8.0.53",
+    "@types/pem": "^1.9.3",
     "dotenv": "^4.0.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "fs-extra": "^4.0.2",
+    "lodash": "^4.17.4",
+    "pem": "^1.12.3"
   },
   "devDependencies": {
     "@types/chai": "^4.0.5",
     "@types/chai-http": "^3.0.3",
     "@types/mocha": "^2.2.44",
+    "@types/sinon": "^4.0.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "del-cli": "^1.1.0",
     "mocha": "^4.0.1",
     "prettier": "^1.8.2",
+    "sinon": "^4.1.2",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.3"
   }
