--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier": "^1.8.2",
     "sinon": "^4.1.2",
     "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.5.3"
   }
 }
