--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - "8"
 sudo: false
-after_success:
+script:
   - npm run coverage
+after_success:
   - npm run codecov
