--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "noImplicitAny": true,
+    "sourceMap": true,
     "baseUrl": "../"
   },
   "include": [
