Fixed the problem caused lint always pass the test

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "gen-empty-env": "ts-node scripts/gen-empty-env.ts",
     "pretest": "npm run build",
     "test": "mocha -r ts-node/register test/**/*.spec.ts --exit",
-    "lint": "tslint .",
+    "lint": "tslint -p .",
+    "lint:fix": "tslint -p . --fix",
     "clean": "del-cli dist",
     "prebuild": "npm run lint",
     "build": "tsc",
