--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "tsc",
     "precommit": "npm run lint",
     "prepush": "npm run build && npm run coverage",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -r ts-node/register test/**/*.spec.ts --exit",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -r ts-node/register test/**/*.spec.ts --exit && npm run coverage:remap",
+    "coverage:remap": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-final.json",
     "codecov": "codecov -t 4a63f508-52ac-4484-8246-d0973f65dcdf"
   },
   "repository": {
@@ -64,6 +65,7 @@
     "istanbul": "^0.4.5",
     "mocha": "^4.0.1",
     "prettier": "^1.8.2",
+    "remap-istanbul": "^0.9.5",
     "sinon": "^4.1.2",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
