--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build": "tsc",
     "precommit": "npm run lint",
     "prepush": "npm run build && npm run coverage",
-    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -r ts-node/register test/**/*.spec.ts --exit && npm run coverage:remap",
-    "coverage:remap": "remap-istanbul -i coverage/coverage.json -o coverage/coverage-final.json",
+    "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -r ts-node/register test/**/*.spec.ts --exit",
+    "coverage:remap": "remap-istanbul -i coverage/coverage.json -o coverage/coverage.json",
     "codecov": "codecov -t 4a63f508-52ac-4484-8246-d0973f65dcdf"
   },
   "repository": {
