--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "express": "^4.16.2",
     "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
-    "pem": "^1.12.3"
+    "pem": "^1.12.3",
+    "ts-node": "^3.3.0"
   },
   "devDependencies": {
     "@types/chai": "^4.0.5",
@@ -67,7 +68,6 @@
     "prettier": "^1.8.2",
     "remap-istanbul": "^0.9.5",
     "sinon": "^4.1.2",
-    "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
   }
