--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
     "pem": "^1.12.3",
-    "ts-node": "^3.3.0"
+    "ts-node": "^3.3.0",
+    "typescript": "^2.5.3"
   },
   "devDependencies": {
     "@types/chai": "^4.0.5",
@@ -68,7 +69,6 @@
     "prettier": "^1.8.2",
     "remap-istanbul": "^0.9.5",
     "sinon": "^4.1.2",
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "tslint": "^5.8.0"
   }
 }
