--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "line-bot-server-nodejs",
+  "name": "line-bot-server",
   "version": "0.1.2",
   "description": "LINE Bot Server for Node.js",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "postinstall": "npm run build && npm run gen-default-ssl && npm run gen-empty-env",
-    "gen-default-ssl": "ts-node scripts/gen-default-ssl.ts",
-    "gen-empty-env": "ts-node scripts/gen-empty-env.ts",
-    "pretest": "npm run build",
-    "test": "mocha -r ts-node/register test/**/*.spec.ts --exit",
-    "lint": "tslint -p .",
-    "lint:fix": "tslint -p . --fix",
-    "clean": "del-cli dist",
-    "prebuild": "npm run lint",
     "build": "tsc",
-    "precommit": "npm run lint",
-    "prepush": "npm run build && npm run coverage",
+    "clean": "del-cli dist",
+    "codecov": "codecov -t 4a63f508-52ac-4484-8246-d0973f65dcdf",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- -r ts-node/register test/**/*.spec.ts --exit",
     "coverage:remap": "remap-istanbul -i coverage/coverage.json -o coverage/coverage.json",
-    "codecov": "codecov -t 4a63f508-52ac-4484-8246-d0973f65dcdf"
+    "gen-default-ssl": "ts-node scripts/gen-default-ssl.ts",
+    "gen-empty-env": "ts-node scripts/gen-empty-env.ts",
+    "lint": "tslint -p .",
+    "lint:fix": "tslint -p . --fix",
+    "prebuild": "npm run clean && npm run lint",
+    "precommit": "npm run lint",
+    "prepush": "npm run build && npm run coverage",
+    "pretest": "npm run build && npm run gen-default-ssl && npm run gen-empty-env",
+    "release": "npm run build && npm publish --access public",
+    "test": "mocha -r ts-node/register test/**/*.spec.ts --exit"
   },
   "repository": {
     "type": "git",
@@ -48,9 +49,7 @@
     "express": "^4.16.2",
     "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
-    "pem": "^1.12.3",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.5.3"
+    "pem": "^1.12.3"
   },
   "devDependencies": {
     "@types/chai": "^4.0.5",
@@ -69,6 +68,8 @@
     "prettier": "^1.8.2",
     "remap-istanbul": "^0.9.5",
     "sinon": "^4.1.2",
-    "tslint": "^5.8.0"
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.2"
   }
 }
