--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "strictNullChecks": true,
     "noUnusedLocals": true,
     "pretty": true,
+    "outDir": "dist",
     "lib": [
       "es2017"
     ]
