--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ node_js:
   - "8"
 sudo: false
 script:
-  - npm run coverage
-  - npm run coverage:remap
+  - npm run travis:test
 after_success:
   - npm run codecov
