--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "pretty": true,
     "outDir": "dist",
     "lib": [
-      "es2017"
+      "es2017",
+      "dom"
     ]
   },
   "include": [
