--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "line-bot-server",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "LINE Bot Server for Node.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -67,6 +67,7 @@
     "@types/pem": "^1.9.3",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-status-monitor": "^1.0.1",
     "fs-extra": "^6.0.1",
     "lodash": "^4.17.10",
     "pem": "^1.12.5"
