--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "line-bot-server",
+  "name": "@intocode-io/line-bot-server",
   "version": "0.2.2",
   "description": "LINE Bot Server for Node.js",
   "main": "dist/index.js",
